feat: update /hands => /hands/random endpoint
